--- a/MineLights.vcxproj.filters
+++ b/MineLights.vcxproj.filters
@@ -42,12 +42,33 @@
     <ClInclude Include="CUESDKGlobal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="libs\jsoncpp-master\include\json.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerProcessor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Biome.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MineLights.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\MineLightsOLD\Server\MineLight\iCueLightController.cpp">
+    <ClCompile Include="iCueLightController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerProcessor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Biome.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -60,7 +81,7 @@
     <Image Include="small.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="MineLights.ico">
+    <Image Include="resources\app_icon.ico">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
