Refactor - Centralised effects for modularity with RGB SDKs

--- a/MineLights.vcxproj
+++ b/MineLights.vcxproj
@@ -161,10 +161,14 @@
     <ClInclude Include="CorsairLedIdEnum.h" />
     <ClInclude Include="CUESDK.h" />
     <ClInclude Include="CUESDKGlobal.h" />
+    <ClInclude Include="EffectPainter.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="iCueLightController.h" />
+    <ClInclude Include="ILightingController.h" />
     <ClInclude Include="libs\nlohmann\json.hpp" />
     <ClInclude Include="libs\nlohmann\json_fwd.hpp" />
+    <ClInclude Include="LightingCommon.h" />
+    <ClInclude Include="LightingManager.h" />
     <ClInclude Include="MineLights.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerProcessor.h" />
@@ -173,7 +177,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Biome.cpp" />
+    <ClCompile Include="EffectPainter.cpp" />
     <ClCompile Include="iCueLightController.cpp" />
+    <ClCompile Include="LightingManager.cpp" />
     <ClCompile Include="MineLights.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerProcessor.cpp" />
