Updated to be a Windows Tray application, added icon

--- a/MineLightsV2/MineLightsV2.csproj
+++ b/MineLightsV2/MineLightsV2.csproj
@@ -1,11 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <OutputType>WinExe</OutputType>
+    <TargetFramework>net9.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="resources\app_icon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="resources\app_icon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="RGB.NET.Core" Version="3.0.0" />
