--- a/MineLightsV2/MineLightsV2.csproj
+++ b/MineLightsV2/MineLightsV2.csproj
@@ -18,6 +18,8 @@
 
   <ItemGroup>
     <PackageReference Include="RGB.NET.Core" Version="3.0.0" />
+    <PackageReference Include="RGB.NET.Devices.Corsair" Version="3.0.0" />
+    <PackageReference Include="RGB.NET.Devices.Msi" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
