--- a/MineLightsV2/MineLightsV2.csproj
+++ b/MineLightsV2/MineLightsV2.csproj
@@ -10,13 +10,18 @@
 
   <ItemGroup>
     <None Remove="resources\app_icon.ico" />
+    <None Remove="resources\x64\CUESDK.x64_2019.dll" />
+    <None Remove="resources\x64\MysticLight_SDK_x64.dll" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="resources\app_icon.ico" />
+    <EmbeddedResource Include="resources\x64\CUESDK.x64_2019.dll" />
+    <EmbeddedResource Include="resources\x64\MysticLight_SDK_x64.dll" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RGB.NET.Core" Version="3.0.0" />
     <PackageReference Include="RGB.NET.Devices.Corsair" Version="3.0.0" />
     <PackageReference Include="RGB.NET.Devices.Msi" Version="3.0.0" />
