--- a/MineLightsV2/MineLightsV2.csproj
+++ b/MineLightsV2/MineLightsV2.csproj
@@ -10,20 +10,34 @@
 
   <ItemGroup>
     <None Remove="resources\app_icon.ico" />
+    <None Remove="resources\x64\Interop.AuraServiceLib.dll" />
+    <None Remove="resources\x64\LogitechLedEnginesWrapper.dll" />
     <None Remove="resources\x64\MysticLight_SDK_x64.dll" />
+    <None Remove="resources\x64\wooting-rgb-sdk.dll" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="resources\app_icon.ico" />
     <EmbeddedResource Include="resources\x64\iCUESDK.x64_2019.dll" />
+    <EmbeddedResource Include="resources\x64\Interop.AuraServiceLib.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="resources\x64\LogitechLedEnginesWrapper.dll" />
     <EmbeddedResource Include="resources\x64\MysticLight_SDK_x64.dll" />
+    <EmbeddedResource Include="resources\x64\wooting-rgb-sdk.dll" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RGB.NET.Core" Version="3.0.0" />
     <PackageReference Include="RGB.NET.Devices.Corsair" Version="3.0.0" />
+    <PackageReference Include="RGB.NET.Devices.Logitech" Version="3.0.0" />
     <PackageReference Include="RGB.NET.Devices.Msi" Version="3.0.0" />
+	<PackageReference Include="RGB.NET.Devices.Asus" Version="3.0.0" />
+	<PackageReference Include="RGB.NET.Devices.Razer" Version="3.0.0" />
+	<PackageReference Include="RGB.NET.Devices.Wooting" Version="3.0.0" />
+	<PackageReference Include="RGB.NET.Devices.SteelSeries" Version="3.0.0" />
+	<PackageReference Include="RGB.NET.Devices.Novation" Version="3.0.0" />
+	<PackageReference Include="RGB.NET.Devices.PicoPi" Version="3.0.0" />
   </ItemGroup>
-
 </Project>
