--- a/MineLights.csproj
+++ b/MineLights.csproj
@@ -9,21 +9,31 @@
     <ApplicationIcon>resources\app_icon.ico</ApplicationIcon>
   </PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="lib\Interop.AuraServiceLib.dll" />
-    <None Remove="resources\app_icon.ico" />
-    <None Remove="resources\x64\Interop.AuraServiceLib.dll" />
-    <None Remove="resources\x64\LogitechLedEnginesWrapper.dll" />
-    <None Remove="resources\x64\MysticLight_SDK_x64.dll" />
-    <None Remove="resources\x64\wooting-rgb-sdk.dll" />
-  </ItemGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
 
-  <ItemGroup>
-    <Content Include="lib\Interop.AuraServiceLib.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="resources\app_icon.ico" />
-  </ItemGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+
+	<ItemGroup>
+		<None Remove="resources\app_icon.ico" />
+		<None Remove="resources\x64\Interop.AuraServiceLib.dll" />
+		<None Remove="resources\x64\LogitechLedEnginesWrapper.dll" />
+		<None Remove="resources\x64\MysticLight_SDK_x64.dll" />
+		<None Remove="resources\x64\wooting-rgb-sdk.dll" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Include="resources\app_icon.ico" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Reference Include="Interop.AuraServiceLib">
+			<HintPath>Interop.AuraServiceLib.dll</HintPath>
+		</Reference>
+	</ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="resources\app_icon.ico" />
